# NeuroMap

./: .gitignore  pyproject.toml  readme.md  requirements.txt
NeuroMap/: __init__.py  arrow.py  cell.py  map.py  soma.py
NeuroMap/cpp/: __init__.py  bind.cpp  run_map.cpp  test.cpp
test/: test.ipynb  test.py
