
[project]
name = "NeuroMap"
version = "0.1.0"
description = "The Brand New Neural Network Library Uesing Map Structure"
authors = [
  { name="rrayy", email="taejunham1@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "setuptools>=80.9.0",
  "torch>=2.9.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 중요한 부분: 현재 구조 그대로 패키지를 찾도록 설정
[tool.setuptools.packages.find]
where = ["."]
include = ["NeuroMap*", "Compiler*"]
